--- a/Minitrees/Base.lproj/Main.storyboard
+++ b/Minitrees/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,7 +26,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbQ-Wh-67c">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbQ-Wh-67c">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connecting" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSY-2o-Ua6">
@@ -54,14 +54,46 @@
                                                 <color key="textColor" red="0.094117647060000004" green="0.094117647060000004" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gRI-A7-Ell">
+                                                <rect key="frame" x="284" y="663" width="200" height="70"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brightness" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TsD-Mw-SGA">
+                                                        <rect key="frame" x="47.5" y="0.0" width="105.5" height="22"/>
+                                                        <fontDescription key="fontDescription" name="UniversLTStd-Light" family="Univers LT Std" pointSize="22"/>
+                                                        <color key="textColor" red="0.094117647060000004" green="0.094117647060000004" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="a68-sg-c62">
+                                                        <rect key="frame" x="-2" y="40" width="204" height="31"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="200" id="FL4-Ox-V27"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <action selector="brightnessChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="AJS-6j-cda"/>
+                                                            <action selector="speedChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="6nN-Bf-mYi"/>
+                                                        </connections>
+                                                    </slider>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="a68-sg-c62" secondAttribute="bottom" id="1qy-oX-ABj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="a68-sg-c62" secondAttribute="trailing" id="79g-nQ-uh1"/>
+                                                    <constraint firstItem="a68-sg-c62" firstAttribute="leading" secondItem="gRI-A7-Ell" secondAttribute="leading" id="JWJ-0i-jGs"/>
+                                                    <constraint firstItem="TsD-Mw-SGA" firstAttribute="top" secondItem="gRI-A7-Ell" secondAttribute="top" id="bT1-o6-0lf"/>
+                                                    <constraint firstItem="TsD-Mw-SGA" firstAttribute="centerX" secondItem="gRI-A7-Ell" secondAttribute="centerX" id="q8M-WA-Jii"/>
+                                                    <constraint firstItem="a68-sg-c62" firstAttribute="top" secondItem="TsD-Mw-SGA" secondAttribute="bottom" constant="18" id="vRg-An-Agn"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="centerY" secondItem="fK1-yR-Cr6" secondAttribute="centerY" id="9pQ-6O-WT9"/>
+                                            <constraint firstItem="gRI-A7-Ell" firstAttribute="top" secondItem="fK1-yR-Cr6" secondAttribute="bottom" constant="150" id="ITY-bt-6dw"/>
                                             <constraint firstAttribute="centerX" secondItem="fK1-yR-Cr6" secondAttribute="centerX" id="Wtk-wn-Vf9"/>
+                                            <constraint firstItem="gRI-A7-Ell" firstAttribute="centerX" secondItem="A2g-Db-cUI" secondAttribute="centerX" id="Wz0-SS-fUf"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-er-1xv">
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-er-1xv">
                                         <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zY0-0U-HSw">
@@ -189,31 +221,31 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Blur" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f1n-Xy-NT5">
-                                                        <rect key="frame" x="498" y="93" width="31" height="21"/>
+                                                        <rect key="frame" x="479" y="93" width="31" height="21"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" name="UniversLTStd-Light" family="Univers LT Std" pointSize="14"/>
                                                         <color key="textColor" red="0.094117647060000004" green="0.094117647060000004" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Atf-cp-rXB">
-                                                        <rect key="frame" x="559" y="89" width="134" height="31"/>
+                                                        <rect key="frame" x="578" y="89" width="134" height="31"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <connections>
                                                             <action selector="blurChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="SHf-nm-VoT"/>
                                                         </connections>
                                                     </slider>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scramble" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uL3-d3-Bjq">
-                                                        <rect key="frame" x="490" y="171" width="60" height="21"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brightness" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uL3-d3-Bjq">
+                                                        <rect key="frame" x="479" y="172" width="73" height="21"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" name="UniversLTStd-Light" family="Univers LT Std" pointSize="14"/>
                                                         <color key="textColor" red="0.094117647060000004" green="0.094117647060000004" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Cdk-Y2-ZdK">
-                                                        <rect key="frame" x="569" y="167" width="134" height="31"/>
+                                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Cdk-Y2-ZdK">
+                                                        <rect key="frame" x="578" y="167" width="134" height="31"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <connections>
-                                                            <action selector="scrambleChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="1ka-Pf-Rli"/>
+                                                            <action selector="brightnessChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="XIr-Rv-sQc"/>
                                                         </connections>
                                                     </slider>
                                                 </subviews>
@@ -234,10 +266,6 @@
                                                     <constraint firstItem="9Bh-Mr-cXk" firstAttribute="top" secondItem="Gv1-zD-wM2" secondAttribute="top" constant="20" id="zfs-3F-zUJ"/>
                                                 </constraints>
                                                 <variation key="default">
-                                                    <mask key="subviews">
-                                                        <exclude reference="uL3-d3-Bjq"/>
-                                                        <exclude reference="Cdk-Y2-ZdK"/>
-                                                    </mask>
                                                     <mask key="constraints">
                                                         <exclude reference="cDE-MZ-fxO"/>
                                                         <exclude reference="1RN-xP-hlc"/>
@@ -318,10 +346,11 @@
                         <outlet property="autoplaySwitch" destination="BEb-CA-AAA" id="OLf-mW-hdx"/>
                         <outlet property="autoplayView" destination="A2g-Db-cUI" id="9Vs-6D-hq8"/>
                         <outlet property="blurSlider" destination="Atf-cp-rXB" id="3Ij-Hf-9vA"/>
+                        <outlet property="brightnessEffectSlider" destination="Cdk-Y2-ZdK" id="OH6-h9-o3X"/>
+                        <outlet property="brightnessSlider" destination="a68-sg-c62" id="cKM-Qu-43y"/>
                         <outlet property="connectedView" destination="q14-R6-JqY" id="yfE-5V-xzk"/>
                         <outlet property="connectingView" destination="xbQ-Wh-67c" id="XIR-SW-c8D"/>
                         <outlet property="controllerView" destination="Jbf-er-1xv" id="FaR-a2-2w2"/>
-                        <outlet property="scrambleSlider" destination="Cdk-Y2-ZdK" id="Y9I-6S-Oue"/>
                         <outlet property="speedSlider" destination="8L1-gr-fZd" id="jQw-JG-3lz"/>
                         <outlet property="spinSlider" destination="fbz-G7-Izi" id="I5Q-J1-bD1"/>
                         <outletCollection property="sliders" destination="Atf-cp-rXB" collectionClass="NSMutableArray" id="JB9-gy-U6c"/>
@@ -332,7 +361,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="121" y="233"/>
+            <point key="canvasLocation" x="120.3125" y="232.61718749999997"/>
         </scene>
         <!--Effects Table View Controller-->
         <scene sceneID="f0q-04-xFr">
@@ -404,7 +433,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="m30-WT-sgN" customClass="PatternCollectionViewCell" customModule="Minitrees" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="Cell" id="m30-WT-sgN" customClass="PatternCollectionViewCell" customModule="Minitrees" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -428,7 +457,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3o-cf-Atw">
-                                            <rect key="frame" x="25" y="46" width="50" height="9"/>
+                                            <rect key="frame" x="-9" y="-4.5" width="50" height="9"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="xhm-hv-Kxt"/>
                                             </constraints>
@@ -482,7 +511,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="eeJ-wM-Z21" customClass="ChannelCollectionViewCell" customModule="Minitrees" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="Cell" id="eeJ-wM-Z21" customClass="ChannelCollectionViewCell" customModule="Minitrees" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="256" height="272"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
